HelloUltraviolet/Fixtures/RejectedSource/Procedures/BehavioralSubtypingPrecondition/Expected.uv
//! Expected diagnostic metadata for the BehavioralSubtypingPrecondition rejected-source specimen.

expectedDiagnostic("E-SEM-2803", "req.15.BehavioralSubtypingPreconditionRule")
